Remove plugin system from starter-application
The plugin feature (ProcessPlugin, ProcessPluginRegistry, plugin loaders,
plugin metrics, plugin health, plugin events) has been removed. This
simplifies the starter to focus on its core responsibilities: context
management, security authorization, and session management.

- Delete entire plugin source tree (21 classes) and test tree (8 tests)
- Delete plugin documentation (PLUGIN_DEVELOPMENT_GUIDE.md, PLUGIN_LOADERS.md)
- Remove plugin beans from ApplicationLayerAutoConfiguration
- Remove plugin auto-config entries from META-INF imports
- Update README and pom.xml description to reflect removal

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <packaging>jar</packaging>
 
     <name>Firefly Framework - Starter Application</name>
-    <description>Starter for application-layer microservices. Enables business process orchestration with context management, security, authorization, and plugin support.</description>
+    <description>Starter for application-layer microservices. Enables business process orchestration with context management, security, authorization, and session management.</description>
 
     <dependencies>
         <!-- Spring Boot WebFlux -->
